# riru_gadget

./: .gitignore  README.md  build.gradle  module.gradle  settings.gradle
ggmanager/: build.gradle  key.jks
ggmanager/src/main/: AndroidManifest.xml  CMakeLists.txt
ggmanager/src/main/java/com/gadget/manager/: BaseActivity.java  CustomApplication.java  MainActivity.java
ggmanager/src/main/java/com/gadget/manager/callback/: Callback.java  ToastCallback.java
ggmanager/src/main/java/com/gadget/manager/ui/: EditGadgetModeActivity.java  PackagesActivity.java
ggmanager/src/main/jni/: cmd.cpp  cmd.h  kill.h  log.h  main.cpp  sign_killer.cpp  sign_killer.h  sign_killer_signal.h
ggmanager/src/main/res/drawable/: bg_edittext_full.xml  bg_tv_notifcation.xml  ic_change.xml  ic_change2.xml  ic_dialog_bg.xml  ic_edit.xml  ic_failed.xml  ic_home_black_24dp.xml  ic_icon_ssytem_app_disable.xml  ic_icon_system_app_enable.xml  ic_panel_bg.xml  ic_round_android_color.xml  ic_success.xml  ic_swich_off.xml  ic_swich_on.xml  ic_text_default.xml  select_swich.xml
ggmanager/src/main/res/layout/: activity_edit_gadget_mode.xml  activity_main.xml  activity_system_app.xml  adapter_packages.xml  fragment_home.xml  fragment_packages.xml  fragment_signkiller.xml  nav_host_fragment.xml  packages_activity.xml  toast.xml
ggmanager/src/main/res/menu/: bottom_nav_menu.xml  menu_edit_gadget.xml  menu_packages.xml
ggmanager/src/main/res/navigation/: mobile_navigation.xml
ggmanager/src/main/res/values/: colors.xml  strings.xml  themes.xml
ggmanager/src/main/res/values-night/: themes.xml
(+19 files in other folders)
